<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Thanox</string>
    <string name="app_description">I am Thanos! 😈👌</string>
    <string name="privacy_agreement_file">privacy/privacy_agreement_en.html</string>
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>
    <string name="status_active">Active</string>
    <string name="status_not_active">Not active</string>
    <string name="message_active_needed">Thanox support both Xposed and Magisk.\n\n For Xposed user (Xposed module and Magisk zip can not be used at the same time), you can just select and check Thanox in Xposed app module config page. \n\nFor Magisk user, you can rename downloaded Thanox apk from .apk to .zip and then install in Magisk manager, or if you can not find the downloaded apk, you can go to Settings, About, Patch status to export the patch</string>
    <string name="status_need_reboot">Reboot</string>
    <string name="title_framework_error">Framework error</string>
    <string name="message_framework_error">There is an error at the Thanox framework. Please report the logs under /data/system/thanos_xxx/log to the developer.</string>
    <string name="title_multiple_patch_applied_error">Multiple patch applied</string>
    <string name="message_multiple_patch_applied_error">You only needs to apply one patch to active Thanox, but you apply multiple patches at the same time: %s, be sure to read the usage guide</string>
    <string name="nav_title_boost">Boost</string>
    <string name="nav_title_secure">Privacy</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_feedback">Feedback</string>
    <string name="nav_title_exp">Extension</string>
    <string name="nav_title_plugin">Plugin</string>
    <string name="nav_title_plugin_repo">Plugin repo</string>
    <string name="nav_title_thanox">Thanox</string>
    <string name="pref_title_feature_toggle">Feature toggle</string>
    <string name="priv_title_fields_template">Templates</string>
    <string name="priv_title_fields_usage_count">Selected for %s apps</string>
    <string name="priv_title_fields_usage_count_noop">Unused</string>
    <string name="title_package_sets">Package sets</string>
    <string name="title_package_add_set">Add Package set</string>
    <string name="title_package_edit_set">View &amp; Edit</string>
    <string name="title_package_delete_set">Delete</string>
    <string name="title_package_count_set">%s Apps</string>
    <string name="dialog_title_plugin_installing">Installing plugin</string>
    <string name="dialog_title_plugin_updating">Updating plugin</string>
    <string name="dialog_title_plugin_uninstalling">Uninstalling plugin</string>
    <string name="dialog_title_plugin_uninstall_confirm">Are you sure to uninstall this plugin?</string>
    <string name="menu_title_uninstall_plugin">Uninstall</string>
    <string name="menu_title_view_plugin_info">Details</string>
    <string name="title_download">Download</string>
    <string name="title_install">Install</string>
    <string name="tile_category_plugin_installed">Installed</string>
    <string name="tile_category_plugin_already_installed">The current installation cannot be overrode, please uninstall then reinstall.</string>
    <string name="tile_category_plugin_update_available">New version available</string>
    <string name="tile_su_plugin_deprecated">The su Enabler plugin has been deprecated, now you don\'t need to install the su plugin. You can directly enable su API support in the Engine Settings of the Profile</string>
    <string name="card_title_plugin_available">Install Thanox plugin</string>
    <string name="card_message_plugin_available">Plugin consist of some unstable or non-critical functions.</string>
    <string name="dialog_message_feedback">You can submit issues for feedback either in the Chat Groups in the Settings-About section or on GitHub/Thanox. When providing feedback, please make sure to include the following essential information: \n\n1. Clear description of the issue with accompanying screenshots or screen recordings. \n2. Log files exported by clicking the button below. \n\nBoth pieces of information are necessary.</string>
    <string name="feedback_export_log">Export log</string>
    <string name="feedback_export_log_success">Log has been exported</string>
    <string name="feedback_export_log_fail">Fail to export log, pls grant Storage permission manually and try again</string>
    <string name="title_no_plugins_installed">No plugin available</string>
    <string name="title_plugin_reboot_take_effect">Please reboot for changes to take effect.</string>
    <string name="title_show_current_activity">Current activity</string>
    <string name="title_net_stats">Net stats</string>
    <string name="message_reboot_needed">Reboot your device to update thanox-core</string>
    <string name="reboot_now">Reboot now</string>
    <string name="reboot_later">Not now</string>
    <string name="badge_app_running">Running</string>
    <string name="badge_app_idle">Idle</string>
    <string name="boost_status_running_apps">&#160;apps running</string>
    <string name="boost_status_blocked_start_count">Blocked %s app startup requests</string>
    <string name="boost_status_mem_usage_percent">Memory  %s</string>
    <string name="boost_status_swap_usage_percent">Swap  %s</string>
    <string name="boost_status_available">Available %s</string>
    <string name="boost_status_not_enabled">Not enabled</string>
    <string name="secure_privacy_enabled_apps">apps has been restricted</string>
    <string name="secure_privacy_request_count">Handled %s app privacy data requests</string>
    <string name="boost_status_system_memory">Memory</string>
    <string name="boost_status_system_storage">Storage</string>
    <string name="feature_category_start_manage">Start</string>
    <string name="feature_title_one_key_boost">One Key Boost</string>
    <string name="feature_title_one_key_boost_abbr">Boost</string>
    <string name="feature_title_start_restrict">Background Start</string>
    <string name="feature_title_start_restrict_abbr">BG Start</string>
    <string name="feature_desc_start_restrict">Allow apps to start from background</string>
    <string name="feature_title_bg_restrict">Background Task</string>
    <string name="feature_title_bg_restrict_abbr">BG Task</string>
    <string name="feature_desc_bg_restrict_brief">Allow apps running in background</string>
    <string name="feature_desc_bg_restrict">When the \"Background task\" feature is enabled, Thanox will perform a process cleanup after the screen is turned off. Allow selected apps to continue running even if the screen is locked, and exclude these apps from one-key boost</string>
    <string name="menu_title_start_restrict_charts">Start record</string>
    <string name="menu_title_rules">Rules</string>
    <string name="feature_summary_start_restrict_rules">You can refine the association start control by making rules. For details, please refer to the novice manual. \n\nNote: The priority of the rule is greater than all other settings (for example, greening, associated startup list). \n\n Tip: Turning off rule checking may save device power.</string>
    <string name="feature_summary_standby_restrict_rules">You can control to retain certain services, usage: KEEP $COMPONENT-NAME  \ne.g. KEEP xxx/.XService</string>
    <string name="feature_category_app_clean_up">Clean</string>
    <string name="feature_title_clean_when_task_removed">Clean Tasks</string>
    <string name="feature_desc_clean_when_task_removed">Clean the background processes of selected apps when they are cleared from recent tasks</string>
    <string name="feature_desc_clean_when_task_removed_brief">Clean background process on task removed</string>
    <string name="activity_title_start_restrict">Background start</string>
    <string name="activity_title_bg_restrict">Background task</string>
    <string name="activity_title_clean_when_task_removed">Clean tasks</string>
    <string name="feature_title_process_manage">Process Manager</string>
    <string name="activity_title_process_manage">Running（%s）</string>
    <string name="item_summary_process_count">%s processes</string>
    <string name="item_summary_mem_size">%s</string>
    <string name="snack_process_update_message">Process list changed, please update</string>
    <string name="snack_process_update_refresh">Update</string>
    <string name="title_cached_background_process">Cached background processes</string>
    <string name="feature_category_app_manage">Apps</string>
    <string name="feature_title_apps_manager">App Manager</string>
    <string name="activity_title_apps_manager">App manager</string>
    <string name="feature_summary_apps_manager">Per-app management and configuration</string>
    <string name="titile_suggested_apps_recent_used">Recently used apps</string>
    <string name="title_suggested_apps_view_all">Show all %s apps</string>
    <string name="feature_category_privacy">Privacy</string>
    <string name="feature_category_manage">Manage</string>
    <string name="feature_category_protect">Protect</string>
    <string name="feature_category_remind">Reminder</string>
    <string name="feature_category_misc">Misc</string>
    <string name="feature_title_recent_task_blur">Task Blur</string>
    <string name="feature_summary_recent_task_blur">Add blur effect to recent tasks</string>
    <string name="feature_title_wakelock_blocker">Wakelock Blocker</string>
    <string name="wakelock_state_holding">Holding</string>
    <string name="wakelock_view_held_only">Held only</string>
    <string name="wakelock_count">%s wakelocks</string>
    <string name="feature_title_app_lock">App Lock</string>
    <string name="feature_summary_app_lock">Show lock interface before app launch</string>
    <string name="feature_category_notification">Notification</string>
    <string name="feature_title_light_on_notification">Light Up</string>
    <string name="feature_summary_light_on_notification">Light up screen on new notification</string>
    <string name="feature_title_push_delegate">Push Delegate</string>
    <string name="feature_category_plugins">Available features</string>
    <string name="feature_category_ext">Extension</string>
    <string name="feature_category_power_save">Power</string>
    <string name="feature_title_smart_app_standby">X Mode</string>
    <string name="feature_summary_smart_app_standby">Affects selected app. When the app returns to the background, it will automatically stop all services or sets them into idle mode; if any service needs to be excluded, please use custom rules.</string>
    <string name="feature_summary_smart_app_standby_brief">Stop service or inactive for bg apps</string>
    <string name="feature_category_apps">Apps</string>
    <string name="menu_title_smart_app_freeze_enable_all_smart_freeze_apps">Remove and de-freeze all listed</string>
    <string name="menu_desc_smart_app_freeze_enable_all_smart_freeze_apps">De-freeze all Smart Freeze apps and remove them from the Smart Freeze list. Are you sure you want to do this?</string>
    <string name="menu_title_smart_app_freeze_enable_all_apps_smart_freeze_temp">De-freeze all listed temporary</string>
    <string name="menu_title_smart_app_freeze_export_package_list">Export app list</string>
    <string name="dialog_message_create_shortcut_apk">Create a shortcut stub apk, you can install this app to as a workaround of the launcher icon for disabling apps</string>
    <string name="badge_trying_app">Trial</string>
    <string name="badge_framework_err">Error</string>
    <string name="badge_power_save_off">Battery</string>
    <string name="title_stub_apk_app_name">App label</string>
    <string name="title_stub_apk_app_version_code">Version code</string>
    <string name="title_stub_apk_app_version_name">Version name</string>
</resources>