<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="github.tornaco.android.thanos.main.NavViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_red_a700">

        <ImageView
            android:layout_width="@dimen/need_reboot_icon_size"
            android:layout_height="@dimen/need_reboot_icon_size"
            android:layout_above="@id/reboot_text"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_alert_fill"
            android:tint="@color/md_white" />

        <TextView
            android:id="@+id/reboot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="@dimen/common_view_margin_default"
            android:text="@string/message_reboot_needed"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ignore_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/common_view_margin_tiny"
            android:layout_marginBottom="@dimen/common_view_margin_default"
            android:layout_toStartOf="@id/reboot_button"
            android:text="@string/reboot_later"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/md_white" />

        <Button
            android:id="@+id/reboot_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/common_view_margin_default"
            android:layout_marginBottom="@dimen/common_view_margin_default"
            android:text="@string/reboot_now"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/md_white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/common_view_margin_default"
            android:src="@drawable/ic_refresh_line"
            android:visibility="gone" />
    </RelativeLayout>
</layout>