<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/common_view_margin_default">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/common_view_margin_small">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_stub_apk_app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:text="App name" />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/common_view_margin_small">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_stub_apk_app_version_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/app_version_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/common_view_margin_small">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_stub_apk_app_version_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/app_version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/tip_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_view_margin_small"
            android:padding="@dimen/common_view_margin_small">

        <ImageView
                android:id="@+id/tip_img"
                android:layout_width="@dimen/common_image_size_14dp"
                android:layout_height="@dimen/common_image_size_14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_lightbulb_fill"
                app:tint="@color/md_grey_700" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/common_view_margin_small"
                android:layout_toEndOf="@id/tip_img"
                android:gravity="center"
                android:text="@string/common_tips"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="@dimen/list_item_main_text_size_small" />
    </RelativeLayout>

    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_view_margin_small"
            android:text="@string/dialog_message_create_shortcut_apk"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
</LinearLayout>