<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/text_recent_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbar"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/common_view_margin_default"
            android:text="@string/titile_suggested_apps_recent_used" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:theme="?appbarTheme"
            app:elevation="@dimen/common_toolbar_elevation">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:popupTheme="?appbarPopupTheme"
                app:theme="?toolbarTheme"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:titleTextColor="?attr/colorControlNormal">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/text_view_all_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/common_view_margin_default"
            android:text="@string/title_suggested_apps_view_all"
            android:textColor="?colorPrimary"
            android:tint="?colorPrimary"
            app:backgroundTint="?colorPrimaryContainer"
            app:icon="@drawable/ic_apps_fill"
            app:iconTint="?colorPrimary" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/package_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/text_view_all_apps"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/common_view_margin_default"
            android:text="@string/title_package_sets"
            android:textColor="?colorPrimary"
            android:tint="?colorPrimary"
            app:backgroundTint="?colorPrimaryContainer"
            app:icon="@drawable/ic_price_tag_3_fill"
            app:iconTint="?colorPrimary" />

        <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
            android:id="@+id/apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/package_sets"
            android:layout_below="@id/text_recent_used"

            android:listModels="@{viewmodel.listModels}"
            android:paddingStart="@dimen/common_view_margin_small"
            android:paddingTop="@dimen/common_view_margin_small"
            android:paddingEnd="@dimen/common_view_margin_small" />
    </RelativeLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="github.tornaco.android.thanos.apps.SuggestedAppsViewModel" />

    </data>
</layout>